2026-09-01-kyverno-policies/02-default-cost-center.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-default-cost-center
spec:
  rules:
    - name: add-cost-center-if-missing
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - kyverno-demo-mutate
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              +(cost-center): "unassigned"
